[gd_scene load_steps=4 format=3 uid="uid://b4b31oefl7jbd"]

[ext_resource type="Theme" uid="uid://dpudwr7i32ra6" path="res://artwork/pixelplatformer_theme.tres" id="1"]
[ext_resource type="Script" path="res://prefabs/GameUI.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://b5ji5kovvue50" path="res://artwork/tiles_packed.png" id="3"]

[node name="GameUI" type="CanvasLayer"]
script = ExtResource("2")

[node name="Points" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -223.0
offset_top = 14.0
offset_right = -19.0
offset_bottom = 47.0
grow_horizontal = 0
theme = ExtResource("1")
text = "Points: 00000100"
horizontal_alignment = 2

[node name="Hearth_01" type="Sprite2D" parent="."]
position = Vector2(30, 30)
scale = Vector2(2, 2)
texture = ExtResource("3")
hframes = 20
vframes = 9
frame = 44

[node name="Hearth_02" type="Sprite2D" parent="."]
position = Vector2(62, 30)
scale = Vector2(2, 2)
texture = ExtResource("3")
hframes = 20
vframes = 9
frame = 44

[node name="Hearth_03" type="Sprite2D" parent="."]
position = Vector2(95, 30)
scale = Vector2(2, 2)
texture = ExtResource("3")
hframes = 20
vframes = 9
frame = 45

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
offset_left = 734.0
offset_top = 80.0
offset_right = 1094.0
offset_bottom = 242.0
texture = ExtResource("3")
stretch_mode = 3
